--- a/css/main.css
+++ b/css/main.css
@@ -332,7 +332,7 @@ body {
 }
 .header__cart__list {
   width: 100%;
-  max-height: 500px;
+  max-height: 50vh;
   overflow-y: auto;
   padding: 1rem 1.5rem;
 }
