--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -208,7 +208,7 @@
 
     &__list {
       width: 100%;
-      max-height: 500px;
+      max-height: 50vh;
       overflow-y: auto;
       padding: 1rem 1.5rem;
 
